--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -1,93 +1,4 @@
 @charset "UTF-8";
-/* =================================================================== 
- * Ffood Main Stylesheet
- * Template Ver. 1.0.0
- * 08-03-2023
- * ------------------------------------------------------------------
- *
- * TOC:
- * # SETTINGS
- *      ## fonts 
- *      ## colors
- *      ## spacing and typescale
- *      ## grid variables
- * # CSS RESET
- * # GRID
- *      ## extra large devices
- *      ## large device
- *      ## medium devices
- *      ## tablet devices
- *      ## mobile devices
- *      ## small mobile devices
- *      ## additional column stackpoints 
- * # BASE SETUP
- * # UTILITY CLASSES
- * # TYPOGRAPHY 
- *      ## base type styles
- *      ## additional typography & helper classes
- *      ## lists
- *      ## media 
- *      ## spacing
- * # PRELOADER
- *      ## page loaded
- * # FORM
- *      ## style placeholder text
- *      ## change autocomplete styles in Chrome
- * # BUTTONS
- * # TABLE
- * # COMPONENTS
- *      ## pagination 
- *      ## alert box 
- *      ## skillbars 
- *      ## stats tabs
- * # PROJECT-WIDE SHARED STYLES
- *      ## section header
- *      ## social list
- *      ## swiper overrides
- *      ## glightbox overrides
- * # GRID-BASED LAYOUTS
- *      ## grid block
- *      ## list grid
- * # PAGE WRAP
- * # SITE HEADER
- *      ## logo
- *      ## mobile menu toggle
- *      ## CTA Button
- *      ## off canvas menu
- * # PAGEHEADER & PAGECONTENT
- * # INTRO
- *      ## intro bg
- *      ## intro content
- *      ## intro scroll down
- *      ## home intro transitions
- * # ABOUT
- *      ## about content header
- *      ## about content main
- * # MENU BLOCK
- *      ## menublock slider
- * # TESTIMONIALS
- * # GALLERY
- *      ## gallery items
- * # FOOTER
- *      ## copyright
- *      ## go top
- * # PAGE STYLES 
- *      ## content block
- *      ## menu block
- *      ## cta block
- *      ## reservation form
- *
- * ------------------------------------------------------------------ */
-
-/* ===================================================================
- * # SETTINGS
- *
- *
- * ------------------------------------------------------------------- */
-
-/* ------------------------------------------------------------------- 
- * ## fonts 
- * ------------------------------------------------------------------- */
 @import url("https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400&family=Cormorant+SC:wght@400;500;600;700&family=Inter:wght@300;400;500;600;700&family=Newsreader:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap");
 
 :root {
@@ -253,27 +164,6 @@
     --vspace-9_5: calc(9.5 * var(--space));
     --vspace-10: calc(10 * var(--space));
 
-    /* type scale
-   * ratio 1          :2 | base: 24px
-   * -------------------------------------------------------
-   *
-   * --text-huge-3    = (178.32px)
-   * --text-huge-2    = (148.60px)
-   * --text-huge-1    = (123.83px)
-   * --text-display-3 = (103.20px)
-   * --text-display-2 = (86.00px)
-   * --text-display-1 = (71.66px)
-   * --text-xxxl      = (59.72px)
-   * --text-xxl       = (49.77px)
-   * --text-xl        = (41.47px)
-   * --text-lg        = (34.56px)
-   * --text-md        = (28.80px)
-   * --text-size      = (24.00px) BASE
-   * --text-sm        = (20.00px)
-   * --text-xs        = (16.67px)
-   *
-   * ---------------------------------------------------------
-   */
     --text-scale-ratio: 1.2;
     --text-size: var(--base-font-size);
     --text-xs: calc(
@@ -441,6 +331,9 @@ video {
     font-size: 100%;
     font: inherit;
     vertical-align: baseline;
+}
+html {
+    scroll-behavior: smooth;
 }
 
 /* HTML5 display-role reset for older browsers */
@@ -4895,4 +4788,3 @@ body.menu-is-open {
 .font-size-2rem {
     font-size: 2rem;
 }
-
