--- a/templates/login.html
+++ b/templates/login.html
@@ -80,12 +80,7 @@
                     >
 
                     <div class="s-header__nav-logo">
-                        <a href="index.html">
-                            <img
-                                src="{{ url_for('static', filename='images/logo.svg')}}"
-                                alt="Homepage"
-                            />
-                        </a>
+                        <a href="index.html"> Ffood </a>
                     </div>
                     <!-- s-header__nav-logo -->
 
